# ff-libc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  GF.c  GF.h  GF_diff.c  GF_div.c  GF_prod.c  GF_sum.c  gf.c  gf.h  poly.c  poly.h  utils.c  utils.h
tests/: CMakeLists.txt  main.c  minunit.h
